Fixed delete css, working on scrollbars

--- a/app/libraries/css/chat_style.css
+++ b/app/libraries/css/chat_style.css
@@ -2,6 +2,24 @@ body{
   background-color:#0f131a;
   font-size:18px;
 }
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: transparent;
+}
+
+::-webkit-scrollbar
+{
+  width: 8px;
+  height:8px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb
+{
+  background-color: #333;
+  opacity:.5;
+}
 .wrapper {
   width:100%;
   height:100%;
@@ -275,6 +293,9 @@ body{
 }
 .mssg_icon, .resp_icon {
   font-size:12px;
+}
+.mssg_icon:hover, .resp_icon:hover {
+  color:red;
 }
 .time {
   float:right;
